--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,11 +1,9 @@
 /* Header.css */
 
-/* Your existing styles */
-
 .announcement-bar {
-  text-align: center; /* Center the text horizontally */
-  background-color: #f0f0f0; /* Example background color */
-  padding: 10px 0; /* Adjust padding as needed */
+  text-align: center; 
+  background-color: #f0f0f0; 
+  padding: 10px 0; 
 }
 
 .home-header {
@@ -26,7 +24,7 @@
 
 .home-header h1 {
   margin: 0;
-  font-size: 36px; /* Increased font size for the title */
+  font-size: 36px; 
   color: #333;
 }
 
@@ -46,7 +44,7 @@
 
 .home-menu li {
   margin: 0 10px;
-  position: relative; /* Added position relative */
+  position: relative; 
 }
 
 .home-menu a {
@@ -56,7 +54,6 @@
   font-size: 14px;
 }
 
-/* Dropdown menu styles */
 .dropdown {
   position: relative;
 }
@@ -86,6 +83,6 @@
 }
 
 .dropdown:hover .home-menu a {
-  background-color: #f9f9f9; /* Change background color of main link on hover */
-  color: #333; /* Change text color of main link on hover */
+  background-color: #f9f9f9; 
+  color: #333; 
 }
