--- a/src/components/Products.css
+++ b/src/components/Products.css
@@ -1,7 +1,7 @@
 .products {
   text-align: center;
   overflow: hidden;
-  margin-top: 120px; /* Adjust top margin to position products below header */
+  margin-top: 120px; 
 }
 
 .announcement-bar {
@@ -33,7 +33,7 @@
 
 .home-header h1 {
   margin: 0;
-  font-size: 36px; /* Increased font size for the title */
+  font-size: 36px; 
   color: #333;
 }
 
@@ -70,8 +70,8 @@
 }
 
 .cart-icon img {
-  width: 55px; /* Increased width for the cart icon */
-  height: 55px; /* Increased height for the cart icon */
+  width: 55px; 
+  height: 55px; 
 }
 
 .products-content {
@@ -91,25 +91,24 @@
 }
 
 .product-item {
-  /* Removed border and background-color */
   padding: 10px;
   text-align: center;
 }
 
 .product-item:hover {
-  background-color: transparent; /* Removed hover background color */
+  background-color: transparent; 
 }
 
 .product-image {
   width: 100%;
-  height: 300px; /* Increase the height of the product images */
+  height: 300px; 
   object-fit: cover;
-  cursor: pointer; /* Add cursor pointer on hover */
+  cursor: pointer; 
   transition: opacity 0.3s ease;
 }
 
 .product-image:hover {
-  opacity: 0.8; /* Optionally reduce opacity on hover for visual feedback */
+  opacity: 0.8; 
 }
 
 .product-details {
@@ -119,12 +118,12 @@
 .product-details h3 {
   font-size: 18px;
   margin-bottom: 5px;
-  cursor: pointer; /* Add cursor pointer on hover */
+  cursor: pointer; 
   transition: color 0.3s ease;
 }
 
 .product-details h3:hover {
-  color: #007bff; /* Example text color change on hover */
+  color: #007bff; 
 }
 
 .product-price {
